--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <button class="btn btn-secondary position-absolute top-0 end-0 m-3" id="alterarTemaSite" onclick="alterarTemaSite()"><i class="bi bi-brightness-high-fill"></i></button>
-    <h1 class="text-center mb-4 p-3">Projeto Carros - Estudante.dev</h1>
+    <h1 class="text-center mb-4 p-3">Projeto Carros</h1>
 
     <div class="container text-center">
         <div class="row" id="cards">
